<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="350px" 
   android:layout_height="150px"
   android:orientation="vertical"
   android:gravity="center"
   >
   
	<LinearLayout
	   android:layout_width="wrap_content" 
	   android:layout_height="wrap_content"
	   android:orientation="horizontal"
	   android:gravity="center"
	   >
	   <ImageView 
	      android:src="@drawable/icon"
	      android:layout_width="wrap_content" 
	      android:layout_height="wrap_content"
	      android:layout_marginRight="10px"
	      />

      <LinearLayout android:orientation="vertical"
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content"
      >

         <LinearLayout android:orientation="horizontal"
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content"
         >
		      <TextView 
		         android:layout_width="wrap_content" 
		         android:layout_height="wrap_content"
		         android:text="@string/app_name" 
		         android:layout_gravity="bottom" 
		         android:textSize="20sp" 
		         />
		   
		      <TextView 
		         android:text="@string/app_version" 
		         android:layout_width="wrap_content" 
		         android:layout_height="wrap_content"
		         android:layout_gravity="bottom" 
		         android:textSize="12sp" 
		         android:layout_marginLeft="10px" 
               android:id="@+id/version_about_textview"
		         />
         </LinearLayout>
         
         <TextView 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:text="@string/app_description" 
            android:layout_gravity="bottom" 
            android:textSize="12sp" 
            />
         
      </LinearLayout>

	</LinearLayout>

   <TextView 
      android:text="@string/authored_by" 
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      android:textSize="15sp"
      android:layout_marginTop="20px" 
      />

</LinearLayout>
